--- a/Estilo.css
+++ b/Estilo.css
@@ -81,11 +81,26 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
     width: 100%;
+    flex-direction: column;
 } 
 
 h2 {
-    color: white;
     width: 100%;
+}
+
+.imagens_projeto {
+    width: 70%;
+
+}
+
+.linguagens_1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 3%;
+}
+
+.iconesHtmlECss {
+    width: 8%;
 }
